--- a/style.css
+++ b/style.css
@@ -1,13 +1,32 @@
 body{
     background-color: #cdf7e4;
+    font-family: DotGothic16;
 }
 
 h1{
-    color: #122020;
-    margin: 100px;
+    color: #363e32;
+    font-size: 60px;
+    margin: 40px;
+}
+
+h2{
+    color: #363e32;
+    font-size: 40px;
+    margin-left: 160px;
 }
 
 .icon{
-    width: 50%;
+    width: 30%;
     height: auto;
+}
+
+.main{
+    display: flex;
+    align-items: center;
+    background-color: #cdf7e4;
+}
+
+
+.name{
+    flex: 1;
 }
