--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 body{
     background-color: #cdf7e4;
     font-family: DotGothic16;
-}
+    color: #363e32
+    }
 
 h1{
-    color: #363e32;
     font-size: 60px;
-    margin: 40px;
+    margin: 0 auto;
+    text-align: center;
+    margin-left: 40px;
 }
 
 h2{
-    color: #363e32;
     font-size: 40px;
-    margin-left: 160px;
+    text-align: center;
+    margin: 0 auto;
+    margin-left: 40px;
+}
+
+h3{
+    text-align: center;
+    font-size: 60px;
+}
+
+p{
+    width: 1000px;
+    font-size: 30px;
+    margin: 0 auto;
+    text-align: left;
 }
 
 .icon{
@@ -23,10 +38,11 @@ h2{
 .main{
     display: flex;
     align-items: center;
-    background-color: #cdf7e4;
+    background-color: #d1e191;
+    text-align: center;
 }
 
-
-.name{
-    flex: 1;
+.profile{
+    display: flex;
+    font-size: 20px;
 }
