--- a/style.css
+++ b/style.css
@@ -46,3 +46,9 @@ p{
     display: flex;
     font-size: 20px;
 }
+
+.skills{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
