--- a/style.css
+++ b/style.css
@@ -103,6 +103,17 @@ h5{
 }
 
 h6{
+    width: 1000px;
+    font-size: 30px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    text-align: center;
+    font-family: "DotGothic16", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h7{
     color: white;
     font-size: 20px;
     margin-left: 40px;
@@ -208,12 +219,16 @@ button:hover {
     gap: 15px;
     margin: 5px;
     margin-bottom: 10px;
+    opacity: 0;
+    animation: fadeIn 1.2s ease forwards;
 }
 
 .product{
     width: 450px;
     background-color: #d1e191;
     border: 5px solid #363e32;
+    opacity: 0;
+    animation: fadeIn 1.2s ease forwards;
 }
 
 .product_image{
@@ -223,6 +238,8 @@ button:hover {
     justify-content: center;
     gap: 5px;
     margin: 5px;
+    opacity: 0;
+    animation: fadeIn 1.2s ease forwards;
 }
 
 figure{
@@ -262,4 +279,13 @@ footer {
     padding: 30px 0;
     z-index: 1000;
     border-bottom: 6px solid #000000;
+}
+
+@keyframes fadeIn {
+    from {
+    opacity: 0;
+    }
+    to {
+    opacity: 1;
+    }
 }
